--- a/pages/about.html
+++ b/pages/about.html
@@ -14,6 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap"
       rel="stylesheet"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <title>Vivire-關於我們</title>
   </head>
   <body>
@@ -36,7 +37,7 @@
           <span class="text-accent-200 fw-semibold"> 關於我們</span></a
         >
       </div>
-      <h1 class="text-neutral-500 fw-900">關於我們</h1>
+      <h1 class="text-neutral-500 fw-900" data-aos="fade-right">關於我們</h1>
     </section>
     <section>
       <div class="container about">
@@ -44,12 +45,14 @@
           <li class="col-12 row mx-lg-9 mb-lg-11">
             <img
               class="col-lg-6 mb-6 mb-lg-0 d-none d-lg-block"
+              data-aos="flip-left"
               src="/assets/images/about-1.png"
               alt="about"
             />
             <img
               class="mb-6 d-lg-none"
               src="/assets/images/about-1-sm.png"
+              data-aos="flip-left"
               alt="about"
             />
             <div class="col-lg-6">
@@ -78,11 +81,13 @@
             <img
               class="col-lg-6 my-6 my-lg-0 d-lg-block d-none"
               src="/assets/images/about-2.png"
+              data-aos="flip-left"
               alt="about"
             />
             <img
               class="my-6 d-lg-none"
               src="/assets/images/about-2-sm.png"
+              data-aos="flip-left"
               alt="about"
             />
             <div class="col-lg-6">
@@ -108,9 +113,19 @@
       <div class="container event py-lg-12 py-9">
         <div class="row">
           <div class="col-lg-4">
-            <h2 class="text-center text-lg-start fw-900 mb-6">大事記</h2>
+            <h2
+              class="text-center text-lg-start fw-900 mb-6"
+              data-aos="fade-right"
+            >
+              大事記
+            </h2>
           </div>
-          <div class="col-lg-8">
+          <div
+            class="col-lg-8"
+            data-aos="fade-down"
+            data-aos-easing="linear"
+            data-aos-duration="1500"
+          >
             <ul>
               <ol class="d-lg-flex align-items-lg-start mb-lg-12 mb-9">
                 <h3
@@ -290,6 +305,9 @@
         <div class="row d-flex justify-content-center my-lg-12 my-9">
           <div
             class="col-lg-8 d-flex flex-column justify-content-center align-items-center"
+            data-aos="fade-down"
+            data-aos-easing="linear"
+            data-aos-duration="1500"
           >
             <h2 class="fw-900">品牌願景</h2>
             <p class="mx-lg-9 my-lg-8 my-6 ls5">
@@ -317,5 +335,9 @@
       integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
